Fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@ html {
 body, html {
     margin: 0;
     padding: 0;
+
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -26,14 +29,19 @@ header p {
     font-style: italic;
 }
 
+main {
+    height: 60vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .eightball {
     display: flex;
     flex-direction: column;
-
     align-items: center;
-    justify-content: center;
     font-size: 2rem;
-    height: 100vh;
 }
 
 #shakeButton {
